<resources>
    <string name="app_name">TakeCare</string>
    <string name="error_title">An error has occurred</string>
    <string name="error_body">Loading process takes too long!\nCheck your internet connection and try again</string>
    <string name="facebook_app_id">1213943598760666</string>
    <string name="fb_login_protocol_scheme">fb1213943598760666</string>
    <string name="fabric_app_id">7f7506f3cfaf9acbb75e34b8b44d610c12a1dccf</string>
    <string name="text_take_role">Need Something?</string>
    <string name="text_give_role">Share Something?</string>
    <string name="font_title">serif</string>
    <string name="taker_menu_title">TakeCare</string>
    <string name="giver_menu_title">TakeCare</string>
    <string name="shared_items_menu_title">My Items</string>
    <string name="requested_items_menu_title">Requested Items</string>
    <string name="user_favorites_menu_title">My Favorites</string>
    <string name="user_profile_menu_title">My Profile</string>
    <string name="item_info_title">Item Information</string>
    <string name="title_activity_giver_menu">GiverMenu</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pick-Up Menu</string>
    <string name="nav_header_subtitle">Search for items that suit your needs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_show_all_title">Show All</string>
    <string name="nav_filter_title">Filter</string>
    <string name="nav_food_title">Food</string>
    <string name="nav_study_material_title">Study Material</string>
    <string name="nav_furniture_title">Households</string>
    <string name="nav_lost_and_found_title">Lost &amp; Found</string>
    <string name="nav_hitchhike_title">Hitchhiking</string>
    <string name="nav_other">Other</string>
    <string name="nav_favorites">Favorites</string>
    <string name="categories_menu_title">Categories</string>
    <string name="nav_requested_items">Requested Items</string>
    <string name="nav_my_items">My Items</string>
    <string name="nav_manage_favorites">Manage Favorites</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_user_settings">User Settings</string>
    <string name="title_activity_taker_menu">TakeCare</string>
    <string name="action_switch_to_map">Map Display</string>
    <string name="action_switch_to_list">List Display</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_chat">Chat</string>
    <string name="action_user_settings">User Settings</string>
    <string name="action_my_items">My Items</string>
    <string name="action_requested_items">Requested Items</string>
    <string name="action_favorites">Favorites</string>
    <string name="filter_menu_display_mode_text">Display Mode:</string>
    <string name="filter_menu_pickup_method_text">Pickup Method:</string>
    <string name="filter_menu_pickup_any">Any</string>
    <string name="filter_menu_pickup_in_person">In Person</string>
    <string name="filter_menu_pickup_giveaway">Giveaway</string>
    <string name="filter_menu_pickup_race">Race</string>
    <string name="filter_menu_search_hint">Enter a keyword</string>
    <string name="jump_to_top_button">Jump to top</string>
    <string name="jump_to_top_button_landscape">Scroll to start</string>
    <string name="taker_card_hint_in_person">This item is available for pick-up in person</string>
    <string name="taker_card_hint_giveaway">This item is available in a public giveaway</string>
    <string name="taker_card_hint_race">Race to get this item before anyone else!</string>
    <string name="taker_card_hint_food">This item\'s category is food</string>
    <string name="taker_card_hint_study_material">This item\'s category is study material</string>
    <string name="taker_card_hint_households">This item\'s category is household objects</string>
    <string name="taker_card_hint_lost_and_found">This item\'s category is lost&amp;founds</string>
    <string name="taker_card_hint_hitchhikes">This item\'s category is hitchhiking</string>
    <string name="taker_card_hint_other">This item is in a category of its own</string>
    <string name="location_disabled">Please enable location services to use this feature</string>
    <string name="hide_no_location_posts">Hide posts without location</string>
    <string name="filter_by_distance">Filter by distance</string>
    <string name="radius">Radius:</string>
    <string name="kilometers">km</string>
    <string name="email_signin_text">Sign up with E-mail</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="bad_credentials">Credentials has been malformed or expired</string>
    <string name="duplicate_user">User with same credentials already exists</string>
    <string name="wrong_credentials">Wrong credentials. Please try again</string>
    <string name="credentials_missing">Please fill your credentials</string>
    <string name="sign_up">Sign Up</string>
    <string name="duplicate_email">Entered email is already registered</string>
    <string name="bad_email">You have entered an illegal email</string>
    <string name="verification_email_sent">Verification mail was sent to your email. Please verify and log in</string>
    <string name="verification_email_error">Connection error. Please try again</string>
    <string name="email_verification_failed">Email verification failed. Please try again.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_credentials_sign_in">Enter your Email and Password:</string>
    <string name="report_inappropriate_text">Inappropriate content</string>
    <string name="report_no_fit_text">Does not fit description</string>
    <string name="report_spam_text">Spam</string>
    <string name="report_hide_text">Hide</string>
    <string name="report_inappropriate_alert">Are you sure you want to report this item for being inappropriate?</string>
    <string name="report_not_fit_description_alert">Are you sure you want to report this item for not fitting its description?</string>
    <string name="report_spam_alert">Are you sure you want to report this item for being spam?</string>
    <string name="report_hide_alert">Are you sure you want to permanently remove the item from your feed?</string>
    <string name="report_alert_warning">This will permanently remove the item from your feed</string>
    <string name="upload_camera_text">Camera</string>
    <string name="upload_gallery_text">Gallery</string>
    <string name="empty_feed_text_1">Uh-oh…\n\nSeems like there are no nearby items available right now!\n\nThe good news is:"</string>
    <string name="empty_feed_text_2">you can share the first one!</string>
    <string name="shared_items_empty_feed_text">You didn\'t share any items yet</string>
    <string name="accepted_items_empty_feed_text">None of your requests was accepted yet</string>
    <string name="pending_items_empty_feed_text">You have no requested items at the moment</string>
    <string name="rejected_items_empty_feed_text">None of your requests was rejected</string>
    <string name="my_requested_items_empty_feed_text">None of your items are requested at the moment</string>
    <string name="my_available_items_empty_feed_text">You don\'t have any available items at the moment</string>
    <string name="my_taken_items_empty_feed_text">None of your items were given to someone</string>
    <string name="my_expired_items_empty_feed_text">None of your items have expired</string>
    <string name="favorites_tags_title">Tags:</string>
    <string name="favorites_tag_hint">e.g. "muffins", "giveaway", "music"…</string>
    <string name="favorites_instruction_text">Type in words that interest you.\nWe\'ll make sure to notify you when a suitable item is posted!</string>
    <string name="favorites_save_changes">Save Changes</string>
    <string name="favorites_help_popup_text">3\-15 characters long.\nSeparate by comma or enter.\nNo duplicates allowed</string>
    <string name="unsaved_tags_title">Unsaved Keywords</string>
    <string name="unsaved_tags_body">Are you sure you don\'t want to save your keywords?</string>
    <string name="loading_keywords">Loading your keywords…</string>
    <string name="loading_keywords_error">Connection error: couldn\'t load keywords</string>
    <string name="saving_keywords">Saving keywords…</string>
    <string name="saving_keywords_dup_short_long">Duplicates, short and long words were removed</string>
    <string name="saving_keywords_dup_short">Duplicates and short words were removed</string>
    <string name="saving_keywords_dup_long">Duplicates and long words were removed</string>
    <string name="saving_keywords_short_long">Short and long words were removed</string>
    <string name="saving_keywords_dup">Duplicates were removed</string>
    <string name="saving_keywords_long">Long words were removed</string>
    <string name="saving_keywords_short">Short words were removed</string>
    <string name="updated_keywords">Updated keywords!</string>
    <string name="updating_keywords_error">An error occurred. Please try again</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_name">This username is invalid</string>
    <string name="user_name">Name</string>
    <string name="sign_up_form_text">Sign Up</string>
    <string name="user_settings_default_user_text">User</string>
    <string name="user_description_text">Tell about yourself</string>
    <string name="show_phone_number">Show Phone Number</string>
    <string name="get_favorites_notifications">Receive notifications from favorites</string>
    <string name="change_password">Change Password</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_items">My Items</string>
    <string name="pending_requests">Requested Items</string>
    <string name="log_out">Log Out</string>
    <string name="icon_credits">Icons made by <a href="https://www.flaticon.com/authors/freepik/">Freepik</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>\nIcons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>\nIcons made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>\nIcons made by <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></string>
    <string name="about_title">About</string>
    <string name="about_text"><![CDATA[TakeCare is a social Android app written in Java and developed on Android Studio, suitable for all audiences over the age of 13.\nIn the app, you choose the role of either a giver or a taker at any given time. A giver shares a thing that they own but are not interested in, whereas a taker can browse such things and choose one to schedule a pickup.\n\nAmong the things you can share with others (or express your interest in):\n\u2022 Food\n\u2022 Furniture\n\u2022 Study material\n\u2022 Hitchhikes\n\u2022 Lost & Founds\n\u2022 Just about anything you see fit!\n\nJoin the sharing revolution: help brighten someone\'s day, and also help the world by not excessively throwing away like in most modern families!]]></string>
    <string name="credits_title">Credits</string>
</resources>