<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/credits_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/about_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/about_title"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/icon_about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:linksClickable="true"
                android:text="@string/about_text"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                android:lineSpacingExtra="2dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_heart_muffin" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits_title"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/icon_credits_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/icon_credits"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>